Fix distorted height

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -4,6 +4,6 @@
 }
 
 .avatar.distorted {
-    height: 200%;
+    height: 400px;
     width: 200px;
 }
